# python-template

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  copier.yaml  main.py  makefile  pyproject.toml  {{_copier_conf.answers_file}}.jinja
.github/workflows/: build.yaml  check.yml  docker-build.yml  image-build.yml  release.yaml  template-build-wheel.yaml  template-docker-build.yaml  template-tests.yaml  tests.yaml  tests.yml  validate-workflows.yaml
template/: AGENTS.md  Dockerfile  Dockerfile.jinja  README.md  makefile  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
template/.github/workflows/: build-wheel.yaml.jinja  build.yaml  ci.yaml  ci.yaml.jinja  release-wheel.yaml  release.yaml  tests.yaml
template/tests/: main_test.py  main_test.py.jinja
tests/: main_test.py
